--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ tasks.named('test') {
 }
 
 - name: Run chmod to make gradlew executable
-   run: chmod +x ./gradlew
+  run: chmod +x ./gradlew
+- name: Build with Gradle
